--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "node": "0.10.x"
   },
   "dependencies": {
-    "express": "~3.1.0",
-    "socket.io": "~0.9.16",
-    "range_check": "~0.0.4",
-    "mongoose": "~3.8.3",
-    "nodemailer": "~0.6.0"
+    "express": "^4.11.0",
+    "mongoose": "^3.8.21",
+    "nodemailer": "^1.3.0",
+    "range_check": "^0.0.5",
+    "socket.io": "^1.2.1"
   }
 }
