--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "0.10.x"
   },
   "dependencies": {
+    "basic-auth": "^1.0.0",
     "express": "^4.11.0",
     "socket.io": "^1.2.1"
   }
