--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "basic-auth": "^1.0.0",
     "express": "^4.11.0",
+    "hiredis": "^0.2.0",
+    "redis": "^0.12.1",
     "socket.io": "^1.2.1"
   }
 }
